<resources>
    <string name="app_name">PokiiMap by KiiDev</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="warning"><b>WARNING</b>:\nThis app uses a private API that may violate TOS of PokemonGO. Do not use your main PokemonGO account! <b>Do NOT use the same account on your phone at the same time</b>, it will look like you are at 2 locations at the same time which is an obvious signal of cheating.\n\n
    You may need to re-login from time to time because this app <b>does NOT store your password!</b></string>

    <eat-comment />
    <string name="username">Username</string>
    <string name="pref_password">Password</string>
    <string name="sign_in">Start</string>
    <string name="logo_header">Logo:</string>
    <string name="ok_label">OK</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="start_header">Please sign in!</string>
    <string name="sign_out">Sign out</string>
    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="sign_in_label">Sign in</string>
    <string name="sign_out_label">Sign out</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_show_full">more...</string>
    <string name="profile">Profile</string>
    <string name="loggedin_message">Logged in. You may need to re-login if the session is lost.</string>
    <string name="frequent_refresh_warning">Do NOT refresh too frequently, you may get block!</string>
    <string name="server_error_message">Server may be down or your account is (temporary) blocked.</string>
    <string name="try_different_account">Try a different account if problem continues.</string>
    <string name="pokemon_info" >{0} escapes in {1} mins {2} secs</string>
    <string name="lure_info">Lure expires in {0} mins {1} secs</string>
    <string name="pokestop_info">Pokestop cools down in {0} mins {1} secs</string>
    <string name="scan_info">Scan will take about* {0} mins {1} secs</string>
    <string name="remove">Remove</string>
    <string name="escaped_message" >{0} had escaped</string>
    <string name="wait">Please wait until refresh stops...</string>
    <string name="stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="show_lure">Only lure</string>
    <string name="show_all_pokestop">All Pokiistops</string>
    <string name="pokestop">Pokiistop</string>
    <string name="pokeball">Pokiiball</string>
    <string name="tap_to_catch">Tap to catch</string>
    <string name="tap_to_loot">Tap to loot</string>
    <string name="catch_wait" >Wait 1 min between catch/loot, {1} sec remains.</string>
    <string name="time_remain">Scan will finish in {0} mins {1} secs...</string>
    <string name="trying_to_catch_">Trying to catch %s</string>
    <string name="unable_to_catch">catch failed!</string>
    <string name="teleport">Don\'t teleport too far and too often!</string>
    <string name="communities">Communities</string>
    <string name="communities_summary">This app is free, open sourced, and communities supported. </string>
    <string name="support">Suppport/Donate</string>
    <string name="support_summary">Support the starving developer, get invite to supporter only community (and maybe some other goodies).</string>
    <string name="developer">Developer</string>
    <string name="developer_summary">Find me on xda-developers, the best forum in the world!</string>
    <string name="loading_">Loading..</string>
    <string name="refresh_interrupted">Refresh interrupted</string>
    <string name="use_hires">Use high res images</string>
    <string name="use_new_icons">use new icons</string>
    <string name="use_old_icons">use old pixel art icons</string>
    <string name="login_headline">Login with ANY PokemonGO account</string>
    <string name="login_method">Login method:</string>
    <string name="ptc">Pokemon Trainer Club</string>
    <string name="go">Go!</string>
    <string name="lure_ended">Last lure ended</string>
    <string name="check_credential">Login failed, check your username and password</string>
    <string name="loot_failed">Loot failed</string>
    <string name="trying_to_loot_">Trying to loot...</string>
    <string name="catching_with_">Catching with</string>
    <string name="no_pokeball">Couldn\'t find a pokeball to use</string>
    <string name="pokeball_changed">No {0} found, using {1} to catch</string>
    <string name="had_escaped">had esapced!</string>
    <string name="had_fleed">had fleed!</string>
    <string name="catch_miss">catch missed!</string>
    <string name="is_caught">is caught!</string>
    <string name="pokemon_to_show">Pokiimon</string>
    <string name="search_range">Search range</string>
</resources>
